<resources>
    <string name="app_name">CAE咨询</string>
    <string name="title_home">首页</string>
    <string name="title_recommend">推荐</string>
    <string name="title_collect">收藏</string>
    <string name="title_expand">扩展</string>
    <string name="user_setting">用户设置</string>
    <string name="system_settings">个性化设置</string>
    <string name="about_cae">关于CAE</string>
    <string name="logout">注销登录</string>
    <string name="exit">退出</string>

    <string name="cae_version">推荐咨询系统v1.0</string>
    <string name="cae_message">
        简介：\n\t\tCAE推荐咨询系统是一款为用户在考试、考证、出门办事方面提供各种事宜的信息系统。
        让不懂变懂，难事变简单，易事更简单。“天下无难事，只怕无CAE”。
    </string>
    <string name="suggestion">建议与反馈</string>
    <string name="advertise">广告入驻</string>


    <!-- Preference Titles -->
    <string name="messages_header">主题</string>
    <string name="sync_header">其他</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>