<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".function.about.AboutCAEActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar_back"/>

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"/>
    <TextView
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:text="@string/cae_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="10dp"
        android:textSize="15dp"
        android:text="@string/cae_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/suggestion_feedback"
        android:text="@string/suggestion"
        android:textSize="20dp"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:textColor="#42A1EA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/advertise_access"
        android:text="@string/advertise"
        android:textSize="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:textColor="#42A1EA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/cae_update"
        android:text="检查更新"
        android:background="@drawable/shape"
        android:backgroundTint="@color/main_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp" />


</RelativeLayout>